# upwork-job-sniper

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  FEATURE_AI_ANALYSIS.md  PRD.md  README.md  main.py  pyproject.toml  requirements.txt  roadmap.md
config/: __init__.py  settings.py
examples/: ai_demo.py
src/: __init__.py
src/ai/: __init__.py  job_analyzer.py
src/api/: __init__.py  refresh_token.py  upwork_graphql.py
src/notifications/: __init__.py  pushover.py
src/utils/: token_manager.py
tests/: test_job_analyzer.py  test_pushover.py  test_real_connection.py  test_upwork_graphql.py
