[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upwork-sniper"
version = "0.1.0"
description = "Automated system for monitoring Upwork job posts and sending real-time notifications."
authors = [
    {name = "Mohamed Khaled", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "python-upwork>=2.0.0",
    "openai>=1.0.0",
    "pushover>=0.3.0",
    "gradio>=3.50.0",
    "httpx>=0.24.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.3.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"

[project.scripts]
upwork-sniper = "upwork_sniper.cli:main"
